--- a/roles/role_desplegar_vbox/tasks/crear/clone/vboxvm.yml
+++ b/roles/role_desplegar_vbox/tasks/crear/clone/vboxvm.yml
@@ -1,57 +1,46 @@
 ---
 - block:
-    - name: Asignar Red VM {{ vmostype }} - {{ vmname }} en VirtuaBox.
+    - name: Creando VM {{ vmostype }} - {{ vmname }} en VirtuaBox
       shell: |
-          {% if 'Tarjeta_puente_internet' in vmnets %}
-            VBoxManage modifyvm {{ vmname }} --nic1 bridged --bridgeadapter1 enp0s31f6
-          {% elif 'Tarjeta_aislada_sin_internete' in vmnets %}
-            VBoxManage modifyvm {{ vmname }} --nic1 hostonly --hostonlyadapter1 vboxnet0
-          {% elif 'Tarjeta_nat_internet_aislada' in vmnets %}
-            VBoxManage modifyvm {{ vmname }} --nic1 natnetwork --natnetwork1 vboxnat0
-          {% elif 'Tarjetas_puente_aislada' in vmnets %}
-            VBoxManage modifyvm {{ vmname }} --nic1 bridged --bridgeadapter1 enp0s31f6
-            VBoxManage modifyvm {{ vmname }} --nic2 hostonly --hostonlyadapter1 vboxnet0
-          {% elif 'Tarjetas_aislada_puente' in vmnets %}
-            VBoxManage modifyvm {{ vmname }} --nic1 hostonly --hostonlyadapter1 vboxnet0
-            VBoxManage modifyvm {{ vmname }} --nic2 bridged --bridgeadapter1 enp0s31f6
-          {% elif 'Tarjetas_nat_aislada' in vmnets %}
-            VBoxManage modifyvm {{ vmname }} --nic1 natnetwork --natnetwork1 vboxnat0
-            VBoxManage modifyvm {{ vmname }} --nic2 hostonly --hostonlyadapter1 vboxnet0
-          {% elif 'Tarjetas_aislada_nat' in vmnets %}
-            VBoxManage modifyvm {{ vmname }} --nic1 hostonly --hostonlyadapter1 vboxnet0
-            VBoxManage modifyvm {{ vmname }} --nic2 natnetwork --natnetwork1 vboxnat0
-          {% endif %}
-  
-- block:
-    - name: Validar Red VM {{ vmostype }} - {{ vmname }} en VirtuaBox.
-      shell: |
-          {% if 'Tarjeta_puente_internet' in vmnets %}
-            sleep 15
-            VBoxManage guestproperty get {{ vmname }} /VirtualBox/GuestInfo/Net/0/V4/IP 2>/dev/null | sed 's/Value: //g'
-          {% elif 'Tarjeta_aislada_sin_internete' in vmnets %}
-            sleep 15
-            VBoxManage guestproperty get {{ vmname }} /VirtualBox/GuestInfo/Net/0/V4/IP 2>/dev/null | sed 's/Value: //g'
-          {% elif 'Tarjeta_nat_internet_aislada' in vmnets %}
-            sleep 15
-            VBoxManage guestproperty get {{ vmname }} /VirtualBox/GuestInfo/Net/0/V4/IP 2>/dev/null | sed 's/Value: //g'
-          {% elif 'Tarjetas_puente_aislada' in vmnets %}
-            sleep 15
-            VBoxManage guestproperty get {{ vmname }} /VirtualBox/GuestInfo/Net/0/V4/IP 2>/dev/null | sed 's/Value: //g'
-            VBoxManage guestproperty get {{ vmname }} /VirtualBox/GuestInfo/Net/1/V4/IP 2>/dev/null | sed 's/Value: //g'
-          {% elif 'Tarjetas_aislada_puente' in vmnets %}
-            sleep 15
-            VBoxManage guestproperty get {{ vmname }} /VirtualBox/GuestInfo/Net/0/V4/IP 2>/dev/null | sed 's/Value: //g'
-            VBoxManage guestproperty get {{ vmname }} /VirtualBox/GuestInfo/Net/1/V4/IP 2>/dev/null | sed 's/Value: //g'
-          {% elif 'Tarjetas_nat_aislada' in vmnets %}
-            sleep 15
-            VBoxManage guestproperty get {{ vmname }} /VirtualBox/GuestInfo/Net/0/V4/IP 2>/dev/null | sed 's/Value: //g'
-            VBoxManage guestproperty get {{ vmname }} /VirtualBox/GuestInfo/Net/1/V4/IP 2>/dev/null | sed 's/Value: //g'
-          {% elif 'Tarjetas_aislada_nat' in vmnets %}
-            sleep 15
-            VBoxManage guestproperty get {{ vmname }} /VirtualBox/GuestInfo/Net/0/V4/IP 2>/dev/null | sed 's/Value: //g'
-            VBoxManage guestproperty get {{ vmname }} /VirtualBox/GuestInfo/Net/1/V4/IP 2>/dev/null | sed 's/Value: //g'
-          {% endif %}
-      register: vmnets
+        VBoxManage clonemedium {{ vmdstoretpt }}/{{ vmostype }}.vdi {{ vmdstoresso }}/{{ vmname }}/{{ 'sd_system00' if 'RedHat' in vmostype else 'hd_system00' }}.vdi --format VDI
+        VBoxManage storageattach {{ vmname }} --storagectl SATA --port 0 --device 0 --type hdd --medium {{ vmdstoresso }}/{{ vmname }}/{{ 'sd_system00' if 'RedHat' in vmostype else 'hd_system00' }}.vdi
+      register: vbxvml_sttos
+
+# - block:
+#     - name: Disco VM - {{ vmostype }} - {{ vmname }} en VirtuaBox
+#       shell: |
+#         VBoxManage createhd --filename {{ vmdstoredsk }}/{{ vmname }}/{{ 'sd_data00' if 'RedHat' in vmostype else 'hd_data00' }}.vdi --size {{ vmdsk }} --format VDI
+#         VBoxManage storageattach {{ vmname }} --storagectl SATA --port 1 --device 0 --type hdd --medium {{ vmdstoredsk }}/{{ vmname }}/{{ 'sd_data00' if 'RedHat' in vmostype else 'hd_data00' }}.vdi
+#       register: vbxvml_sttsd
+
+# - block:
+#     - name: Iniciar Maquina VM {{ vmostype }} - {{ vmname }} en VirtuaBox
+#       shell: |
+#         VBoxManage startvm {{ vmname }} --type headless
+#         sleep 30
+#       register: vbxvm_sttup
+
+# - block:
+#     - name: Asignando red para la VM {{ vmostype }} - {{ vmname }} en VirtuaBox
+#       shell: |
+#         sleep 15
+#         VBoxManage guestproperty get {{ vmname }} /VirtualBox/GuestInfo/Net/0/V4/IP 2>/dev/null | sed 's/Value: //g'
+#         VBoxManage guestproperty get {{ vmname }} /VirtualBox/GuestInfo/Net/1/V4/IP 2>/dev/null | sed 's/Value: //g'
+#       register: vmnets
+
+# - name: Recursos finales de la VM {{ vmostype }} - {{ vmname }} en VirtuaBox
+#   debug:
+#     msg:
+#       - "La VM {{ vmostype }} - {{ vmname }} en VirtuaBox - Activa y con los recursos:" 
+#       - "Tipo: {{ vmostype }}"
+#       - "Nombre: {{ vmname }}"
+#       - "Vitualizador: VirtuaBox"
+#       - "Ambiente {{ vmenv.split(',')[0] | trim }}"
+#       - "Numero de CPU's: {{ vmsource.split(',')[0] | trim }} "
+#       - "Cantidad de Memoria: {{ vmsource.split(',')[1] | trim }} MB"
+#       - "Tamaño disco extra: {{ vmsource.split(',')[2] | trim }} MB"
+#       - "IP Tarjeta de red0: {{ vmnets.stdout_lines[0] }}"
+#       - "IP Tarjeta de red1: {{ vmnets.stdout_lines[1] }}"
 
       # register: vbxvml_sttos
       # when: "'RedHat' in vmostype"
