--- a/roles/role_desplegar_vbox/tasks/ambientar/vboxvm.yml
+++ b/roles/role_desplegar_vbox/tasks/ambientar/vboxvm.yml
@@ -2,13 +2,13 @@
   set_fact:
     vmsource: |
       {% if 'small' in vmsources %}
-      1,1,55
+      1,1024,56320
       {% elif 'medium' in vmsources %}
-      1,2,55
+      1,2048,56320
       {% elif 'large' in vmsources %}
-      2,2,55
+      2,2048,56320
       {% elif 'xlarge' in vmsources %}
-      2,3,55
+      2,3072,56320
       {% endif %}
 
 - name: Ambiente VM {{ vmostype }} - {{ vmname }} en VirtuaBox
@@ -22,16 +22,16 @@
       liga oculta,lo
       {% endif %}
 
-# - name: Recursos seleccionados para la creacion de la VM
-#   debug:
-#     msg:
-#       - "Tipo: {{ vmostype }}"
-#       - "Nombre: {{ vmname }}"
-#       - "Vitualizador: VirtuaBox"
-#       - "Ambiente {{ vmenv.split(',')[0] | trim }}"
+- name: Recursos seleccionados para la creacion de la VM
+  debug:
+    msg: 
+      - "Tipo: {{ vmostype }}"
+      - "Nombre: {{ vmname }}"
+      - "Vitualizador: VirtuaBox"
+      - "Ambiente {{ vmenv.split(',')[0] | trim }}"
       - "Numero de CPU's: {{ vmsource.split(',')[0] | trim }} "
-      # - "Cantidad de Memoria: {{ vmsource.split(',')[1] | int * 1024 | trim }} MB"
-      # - "Tamaño disco extra: {{ vmsource.split(',')[2] | int * 1024 | trim }} MB"
+      - "Cantidad de Memoria: {{ vmsource.split(',')[1] | trim }} MB"
+      - "Tamaño disco extra: {{ vmsource.split(',')[2] | trim }} MB"
 
 - set_fact:
     vmcpu: "{{ vmsource.split(',')[0] | trim }}"
