--- a/roles/role_desplegar_vbox/tasks/mensajes/final/vboxvm.yml
+++ b/roles/role_desplegar_vbox/tasks/mensajes/final/vboxvm.yml
@@ -8,7 +8,7 @@
           - "Vitualizador: VirtuaBox"
           - "Ambiente {{ vmenv.split(',')[0] | trim }}"
           - "Numero de CPU's: {{ vmsource.split(',')[0] | trim }} "
-          - "Cantidad de Memoria: {{ vmsource.split(',')[1] | trim }} MB"
-          - "Tamaño disco extra: {{ vmsource.split(',')[2] | trim }} MB"
+          - "Cantidad de Memoria: {{ vmsource.split(',')[1] | trim }} GB"
+          - "Tamaño disco extra: {{ vmsource.split(',')[2] | trim }} GB"
           - "IP Tarjeta de red0: {{ vmnets.stdout_lines[0] }}"
           - "IP Tarjeta de red1: {{ vmnets.stdout_lines[1] }}"
