--- a/roles/role_desplegar_vbox/tasks/crear/disk/vboxvm.yml
+++ b/roles/role_desplegar_vbox/tasks/crear/disk/vboxvm.yml
@@ -1,132 +1,7 @@
 ---
 - block:
-    - name: Creando VM {{ vmostype }} - {{ vmname }} en VirtuaBox
-      shell: |
-        VBoxManage storagectl {{ vmname }} --name "IDE Controller" --add ide
-        VBoxManage storageattach {{ vmname }} --storagectl "IDE Controller" --port 0 --device 1 --type dvddrive --medium emptydrive
-        VBoxManage storagectl {{ vmname }} --name SATA --add sata --controller IntelAHCI --portcount 10
-      register: vbxvml_sttos
-
-- block:
-    - name: Disco VM - {{ vmostype }} - {{ vmname }} en VirtuaBox
+    - name: Crear dico extra para la VM {{ vmostype }} - {{ vmname }} en VirtuaBox.
       shell: |
         VBoxManage createhd --filename {{ vmdstoredsk }}/{{ vmname }}/{{ 'sd_data00' if 'RedHat' in vmostype else 'hd_data00' }}.vdi --size {{ vmdsk }} --format VDI
         VBoxManage storageattach {{ vmname }} --storagectl SATA --port 1 --device 0 --type hdd --medium {{ vmdstoredsk }}/{{ vmname }}/{{ 'sd_data00' if 'RedHat' in vmostype else 'hd_data00' }}.vdi
-      register: vbxvml_sttsd
-
-- block:
-    - name: Iniciar Maquina VM {{ vmostype }} - {{ vmname }} en VirtuaBox
-      shell: |
-        VBoxManage startvm {{ vmname }} --type headless
-        sleep 30
-      register: vbxvm_sttup
-
-- block:
-    - name: Asignando red para la VM {{ vmostype }} - {{ vmname }} en VirtuaBox
-      shell: |
-        sleep 15
-        VBoxManage guestproperty get {{ vmname }} /VirtualBox/GuestInfo/Net/0/V4/IP 2>/dev/null | sed 's/Value: //g'
-        VBoxManage guestproperty get {{ vmname }} /VirtualBox/GuestInfo/Net/1/V4/IP 2>/dev/null | sed 's/Value: //g'
-      register: vmnets
-
-- name: Recursos finales de la VM {{ vmostype }} - {{ vmname }} en VirtuaBox
-  debug:
-    msg:
-      - "La VM {{ vmostype }} - {{ vmname }} en VirtuaBox - Activa y con los recursos:" 
-      - "Tipo: {{ vmostype }}"
-      - "Nombre: {{ vmname }}"
-      - "Vitualizador: VirtuaBox"
-      - "Ambiente {{ vmenv.split(',')[0] | trim }}"
-      - "Numero de CPU's: {{ vmsource.split(',')[0] | trim }} "
-      - "Cantidad de Memoria: {{ vmsource.split(',')[1] | trim }} MB"
-      - "Tamaño disco extra: {{ vmsource.split(',')[2] | trim }} MB"
-      - "IP Tarjeta de red0: {{ vmnets.stdout_lines[0] }}"
-      - "IP Tarjeta de red1: {{ vmnets.stdout_lines[1] }}"
-
-      # register: vbxvml_sttos
-      # when: "'RedHat' in vmostype"
-
-    # - name: Asignando disco extra para VirtuaBox Linux
-    #   shell: |
-    #     VBoxManage createhd --filename {{ vmdstoresso }}/{{ vmname }}/sd_data00.vdi --size {{ vmdsk }} --format VDI
-    #     VBoxManage storageattach {{ vmname }} --storagectl SATA --port 1 --device 0 --type hdd --medium {{ vmdstoresso }}/{{ vmname }}/sd_data00.vdi
-    #   register: vbxvml_sttsd
-    #   when: "vbvmcl_nldks == 'sdb'"
-
-    # - name: Creando VirtuaBox Windows
-    #   shell: |
-    #     VBoxManage createvm --name {{ vmname }} --ostype {{ vmostype }} --register --basefolder {{ dirdisknvmg }}
-    #     VBoxManage modifyvm {{ vmname }} --ioapic on
-    #     VBoxManage modifyvm {{ vmname }} --cpus {{ vmcpu }}
-    #     VBoxManage modifyvm {{ vmname }} --audio none
-    #     VBoxManage modifyvm {{ vmname }} --memory {{ vmmem }}
-    #     VBoxManage modifyvm {{ vmname }} --nic1 bridged --nictype1 82545EM --bridgeadapter1 enp0s31f6
-    #     VBoxManage modifyvm {{ vmname }} --nic2 hostonly --nictype2 82545EM --hostonlyadapter2 vboxnet0
-    #     VBoxManage storagectl {{ vmname }} --name SATA --add sata --controller IntelAHCI --portcount 1
-    #     VBoxManage clonemedium {{ dirdisknvmg }}/{{ vmostype }}/vbw{{ vbvmcl_oswver }}clone.vdi {{ dirdisknvmg }}/{{ vmname }}/vbw{{ vbvmcl_oswver }}_hdd0.vdi --format VDI
-    #     VBoxManage storageattach {{ vmname }} --storagectl SATA --port 0 --device 0 --type hdd --medium {{ dirdisknvmg }}/{{ vmname }}/vbw{{ vbvmcl_oswver }}_hdd0.vdi
-    #   register: vbxvmw_sttos
-    #   when: "'Windows' in vmostype"
-
-    # - name: Asignando disco extra para VirtuaBox Windows
-    #   shell: |
-    #     VBoxManage createhd --filename {{ dirdisknvmg }}/{{ vmname }}/vbw{{ vbvmcl_oswver }}_{{ vbvmcl_nwdks }}.vdi --size {{ nwdsksz }} --format VDI
-    #     VBoxManage storageattach {{ vmname }} --storagectl SATA --port 1 --device 0 --type hdd --medium {{ dirdisknvmg }}/{{ vmname }}/vbw{{ vbvmcl_oswver }}_{{ vbvmcl_nwdks }}.vdi
-    #   register: vbxvmw_stthd
-    #   when: "vbvmcl_nwdks == 'hdd1'"
-
-    # - name: Iniciar Maquina VirtuaBox
-    #   shell: |
-    #     VBoxManage startvm {{ vmname }} --type headless
-    #     sleep 30
-    #   register: vbxvm_sttup
-
-  #   - name: Asignando red para la VirtuaBox
-  #     shell: |
-  #       sleep 15
-  #       VBoxManage guestproperty get {{ vmname }} /VirtualBox/GuestInfo/Net/0/V4/IP 2>/dev/null | sed 's/Value: //g'
-  #       VBoxManage guestproperty get {{ vmname }} /VirtualBox/GuestInfo/Net/1/V4/IP 2>/dev/null | sed 's/Value: //g'
-  #     register: vbxvm_sttnet
-  #     when: "vbvm_up == 'Si'"
-  # ignore_errors: true
-
-# - name: Tareas por bloques - VirtualBox Guest pertenece al ambiente Produccion o Desarrollo
-#   block:
-#     - name: Verificar VirtuaBox Guest Linux es produccion o desarrollo
-#       shell: echo "{{ vmname }}" | grep -i vblp >/dev/null && echo produccion || echo desarrollo
-#       register: vbvmgt_envl
-#       when: "'RedHat' in vmostype"
-
-#     - name: Verificar VirtuaBox Guest Windows es produccion o desarrollo
-#       shell: echo "{{ vmname }}" | grep -i vbwp >/dev/null && echo produccion || echo desarrollo
-#       register: vbvmgt_envw
-#       when: "'Windows' in vmostype"
-
-# - name: Tareas por bloques - Imprimir Resultados VM Linux
-#   block:
-#     - name: Resultado de VirtualBox Guest
-#       debug:
-#         msg:
-#           - "Informacion de la VirtualBox Guest"
-#           - "Hostname: {{ vmname }}"
-#           - "Distribucion OS: {{ vmostype }}"
-#           - "Ambiente: {{ vbvmgt_envl.stdout }}"
-#           - "Numero de CPU's: {{ vmcpu }}"
-#           - "Memoria Total: {{ vmmem }}"
-#           - "IP Dinamica1: {{ vbxvm_sttnet.stdout_lines[0] }}"
-#           - "IP Dinamica2: {{ vbxvm_sttnet.stdout_lines[1] }}"
-      # when: "'RedHat' in vmostype"
-
-    # - name: Resultado de VirtualBox Guest
-    #   debug:
-    #     msg:
-    #       - "Informacion de la VirtualBox Guest"
-    #       - "Hostname: {{ vmname }}"
-    #       - "Distribucion OS: {{ vmostype }}"
-    #       - "Version OS: {{ vbvmcl_oswver }}"
-    #       - "Ambiente: {{ vbvmgt_envw.stdout }}"
-    #       - "Numero de CPU's: {{ vmcpu }}"
-    #       - "Memoria Total: {{ vmmem }}"
-    #       - "IP Dinamica1: {{ vbxvm_sttnet.stdout_lines[0] }}"
-    #       - "IP Dinamica2: {{ vbxvm_sttnet.stdout_lines[1] }}"
-    #   when: "'Windows' in vmostype"
+      register: vmoutputstorageex
