--- a/roles/role_desplegar_vbox/tasks/mensajes/inicio/vboxvm.yml
+++ b/roles/role_desplegar_vbox/tasks/mensajes/inicio/vboxvm.yml
@@ -5,7 +5,7 @@
           - "Tipo: {{ vmostype }}"
           - "Nombre: {{ vmname }}"
           - "Vitualizador: VirtuaBox"
-          - "Ambiente {{ vmenv.split(',')[0] | trim }}"
+          - "Ambiente: {{ vmenv.split(',')[0] | trim }}"
           - "Numero de CPU's: {{ vmsource.split(',')[0] | trim }} "
           - "Cantidad de Memoria: {{ vmsource.split(',')[1] | trim }} GB"
           - "Tamaño disco extra: {{ vmsource.split(',')[2] | trim }} GB"
