--- a/roles/role_desplegar_vbox/tasks/mensajes/final/vboxvm.yml
+++ b/roles/role_desplegar_vbox/tasks/mensajes/final/vboxvm.yml
@@ -2,13 +2,16 @@
     - name: Recursos finales de la VM {{ vmostype }} - {{ vmname }} en VirtuaBox
       debug:
         msg:
-          - "La VM {{ vmostype }} - {{ vmname }} en VirtuaBox - Activa y con los recursos:" 
           - "Tipo: {{ vmostype }}"
           - "Nombre: {{ vmname }}"
           - "Vitualizador: VirtuaBox"
-          - "Ambiente {{ vmenv.split(',')[0] | trim }}"
-          - "Numero de CPU's: {{ vmsource.split(',')[0] | trim }} "
-          - "Cantidad de Memoria: {{ vmsource.split(',')[1] | trim }} GB"
-          - "Tamaño disco extra: {{ vmsource.split(',')[2] | trim }} GB"
+          - "Ambiente: {{ vmenv.split(',')[0] | trim }}"
+          - "Numero de CPU's: {{ vmsource.split(',')[0] | trim }}"
+          - "Cantidad de Memoria: {{ vmsource.split(',')[1] | trim }}GB"
+          - "Tamaño disco extra: {{ vmsource.split(',')[2] | trim }}GB"
+            {% if 'Tarjeta' in vmnets %}
+          - "IP Tarjeta de red0: {{ vmnets.stdout_lines[0] }}"
+            {% elif 'Tarjetas' in vmnets %}
           - "IP Tarjeta de red0: {{ vmnets.stdout_lines[0] }}"
           - "IP Tarjeta de red1: {{ vmnets.stdout_lines[1] }}"
+            {% endif %}
