--- a/roles/role_desplegar_vbox/tasks/mensajes/final/vboxvm.yml
+++ b/roles/role_desplegar_vbox/tasks/mensajes/final/vboxvm.yml
@@ -1,22 +1,39 @@
 ---
-- block:
-    - name: Determinar configuración de red
-      set_fact:
-        network_config: |
-          {% if 'Tarjetas' in vmnets %}
-          {% set nets = [] %}
-          {% for i in range(vmoutputnetval.stdout_lines | length) %}
-          {% set _ = nets.append("IP Tarjeta de red" ~ i ~ ": " ~ vmoutputnetval.stdout_lines[i]) %}
-          {% endfor %}
-          {{ nets | join('\n') }}
-          {% elif 'Tarjeta' in vmnets %}
-          IP Tarjeta de red0: {{ vmoutputnetval.stdout_lines[0] }}
-          {% else %}
-          Sin configuración de red
-          {% endif %}
+# - block:
+#     - name: Determinar configuración de red
+#       set_fact:
+#         network_config: |
+#           {% if 'Tarjetas' in vmnets %}
+#           {% set nets = [] %}
+#           {% for i in range(vmoutputnetval.stdout_lines | length) %}
+#           {% set _ = nets.append("IP Tarjeta de red" ~ i ~ ": " ~ vmoutputnetval.stdout_lines[i]) %}
+#           {% endfor %}
+#           {{ nets | join('\n') }}
+#           {% elif 'Tarjeta' in vmnets %}
+#           IP Tarjeta de red0: {{ vmoutputnetval.stdout_lines[0] }}
+#           {% else %}
+#           Sin configuración de red
+#           {% endif %}
+
+# - block:
+#     - name: Recursos finales de la VM {{ vmostype }} - {{ vmname }} en VirtuaBox
+#       debug:
+#         msg:
+#           - "Tipo: {{ vmostype }}"
+#           - "Nombre: {{ vmname }}"
+#           - "Vitualizador: VirtuaBox"
+#           - "Ambiente: {{ vmenv.split(',')[0] | trim }}"
+#           - "Numero de CPU's: {{ vmsource.split(',')[0] | trim }}"
+#           - "Cantidad de Memoria: {{ vmsource.split(',')[1] | trim }}GB"
+#           - "Tamaño disco extra: {{ vmsource.split(',')[2] | trim }}GB"
+#           - "{{ network_config }}"
+
+
+
+
 
 - block:
-    - name: Recursos finales de la VM {{ vmostype }} - {{ vmname }} en VirtuaBox
+    - name: Recursos finales de la VM {{ vmostype }} - {{ vmname }} en VirtuaBox.
       debug:
         msg:
           - "Tipo: {{ vmostype }}"
@@ -26,4 +43,9 @@
           - "Numero de CPU's: {{ vmsource.split(',')[0] | trim }}"
           - "Cantidad de Memoria: {{ vmsource.split(',')[1] | trim }}GB"
           - "Tamaño disco extra: {{ vmsource.split(',')[2] | trim }}GB"
-          - "{{ network_config }}"
+            {% if 'Tarjeta' in vmnets %}
+          - "IP Tarjeta de red0: {{ vmoutputnetval.stdout_lines[0] }}"
+            {% elif 'Tarjetas' in vmnets %}
+          - "IP Tarjeta de red0: {{ vmoutputnetval.stdout_lines[0] }}"
+          - "IP Tarjeta de red1: {{ vmoutputnetval.stdout_lines[1] }}"
+            {% endif %}
