--- a/roles/role_desplegar_vbox/tasks/mensajes/final/vboxvm.yml
+++ b/roles/role_desplegar_vbox/tasks/mensajes/final/vboxvm.yml
@@ -26,7 +26,7 @@
 #           - "Numero de CPU's: {{ vmsource.split(',')[0] | trim }}"
 #           - "Cantidad de Memoria: {{ vmsource.split(',')[1] | trim }}GB"
 #           - "Tamaño disco extra: {{ vmsource.split(',')[2] | trim }}GB"
-#           - "{{ network_config }}"
+#           - "{{ network_config | trim }}"
 
 
 
@@ -43,9 +43,9 @@
           - "Numero de CPU's: {{ vmsource.split(',')[0] | trim }}"
           - "Cantidad de Memoria: {{ vmsource.split(',')[1] | trim }}GB"
           - "Tamaño disco extra: {{ vmsource.split(',')[2] | trim }}GB"
-            {% if 'Tarjeta' in vmnets %}
+          {% if 'Tarjeta' in vmnets %}
           - "IP Tarjeta de red0: {{ vmoutputnetval.stdout_lines[0] }}"
-            {% elif 'Tarjetas' in vmnets %}
+          {% elif 'Tarjetas' in vmnets %}
           - "IP Tarjeta de red0: {{ vmoutputnetval.stdout_lines[0] }}"
           - "IP Tarjeta de red1: {{ vmoutputnetval.stdout_lines[1] }}"
-            {% endif %}
+          {% endif %}
