--- a/roles/role_desplegar_vbox/tasks/validar/redes/vboxvm.yml
+++ b/roles/role_desplegar_vbox/tasks/validar/redes/vboxvm.yml
@@ -4,7 +4,7 @@
           {% if 'Tarjeta' in vmnets %}
             sleep 15
             VBoxManage guestproperty get {{ vmname }} /VirtualBox/GuestInfo/Net/0/V4/IP 2>/dev/null | sed 's/Value: //g'
-          {% elif 'Tarjeta' in vmnets %}
+          {% elif 'Tarjetas' in vmnets %}
             sleep 15
             VBoxManage guestproperty get {{ vmname }} /VirtualBox/GuestInfo/Net/0/V4/IP 2>/dev/null | sed 's/Value: //g'
             VBoxManage guestproperty get {{ vmname }} /VirtualBox/GuestInfo/Net/1/V4/IP 2>/dev/null | sed 's/Value: //g'
