--- a/roles/role_desplegar_vbox/tasks/validar/redes/vboxvm.yml
+++ b/roles/role_desplegar_vbox/tasks/validar/redes/vboxvm.yml
@@ -11,3 +11,7 @@
           VBoxManage guestproperty get {{ vmname }} /VirtualBox/GuestInfo/Net/1/V4/IP 2>/dev/null | sed 's/Value: //g'
           {% endif %}
       register: vmoutputnetval
+
+- name: depura descubre ips
+  debug:
+    msg: "{{ vmoutputnetval.results }}"
