--- a/roles/role_desplegar_vbox/tasks/validar/red/vboxvm.yml
+++ b/roles/role_desplegar_vbox/tasks/validar/red/vboxvm.yml
@@ -1,8 +1,7 @@
 ---
 - block:
-    - name: Validar Reds VM {{ vmostype }} - {{ vmname }} en VirtuaBox.
+    - name: Validar Red VM {{ vmostype }} - {{ vmname }} en VirtuaBox.
       shell: |
           sleep 15
           VBoxManage guestproperty get {{ vmname }} /VirtualBox/GuestInfo/Net/0/V4/IP 2>/dev/null | sed 's/Value: //g'
-          VBoxManage guestproperty get {{ vmname }} /VirtualBox/GuestInfo/Net/1/V4/IP 2>/dev/null | sed 's/Value: //g'
       register: vmoutputnetval
