--- a/roles/role_desplegar_vbox/tasks/prueba/vboxvm.yml
+++ b/roles/role_desplegar_vbox/tasks/prueba/vboxvm.yml
@@ -18,6 +18,7 @@
       - "{{ vmname }}"
       - "{{ vmostype }}"
       - "{{ vmsource | trim }}"
+      - "{{ vmnets | trim }}"
 
 - name: Prueba 1 agrupando eco tipo de ambiente
   set_fact:
