--- a/roles/role_desplegar_vbox/tasks/prueba/vboxvm.yml
+++ b/roles/role_desplegar_vbox/tasks/prueba/vboxvm.yml
@@ -83,7 +83,7 @@
 
 - name: Prueba 6 de mensaje con condicion
   debug:
-    msg: 
+    msg: |
       {% if 'Tarjeta' == vmnet %}
       - "Una Tarjeta"
       {% else %}
