--- a/roles/role_desplegar_vbox/tasks/main.yml
+++ b/roles/role_desplegar_vbox/tasks/main.yml
@@ -20,7 +20,7 @@
       {% if tarea == 'Crear_VitualBox_Machine' %}
       ['ambientar/vboxvm','mensajes/inicio/vboxvm','crear/vm/vboxvm','crear/clone/vboxvm','crear/disk/vboxvm','crear/net/vboxvm','prender/vboxvm','validar/vboxvm','mensajes/final/vboxvm']
       {% elif tarea == 'Desconectar_VitualBox_Machine' %}
-      ['ambientar/vboxvm','desconectar/ney/vboxvm']
+      ['ambientar/vboxvm','desconectar/net/vboxvm']
       {% elif tarea == 'Conectar_VitualBox_Machine' %}
       ['ambientar/vboxvm','conectar/vboxvm']
       {% elif tarea == 'Borrar_VitualBox_Machine' %}
