--- a/roles/role_desplegar_vbox/tasks/crear/net/vboxvm.yml
+++ b/roles/role_desplegar_vbox/tasks/crear/net/vboxvm.yml
@@ -13,15 +13,19 @@
             VBoxManage modifyvm {{ vmname }} --nic2 hostonly --hostonlyadapter1 vboxnet0
           {% elif 'Tarjetas_aislada_puente' in vmnets %}
             VBoxManage modifyvm {{ vmname }} --nic1 hostonly --hostonlyadapter1 vboxnet0
+            sleep 3
             VBoxManage modifyvm {{ vmname }} --nic2 bridged --bridgeadapter1 enp0s31f6
           {% elif 'Tarjetas_nat_aislada' in vmnets %}
             VBoxManage modifyvm {{ vmname }} --nic1 natnetwork --natnetwork1 vboxnat0
+            sleep 3
             VBoxManage modifyvm {{ vmname }} --nic2 hostonly --hostonlyadapter1 vboxnet0
           {% elif 'Tarjetas_aislada_nat' in vmnets %}
             VBoxManage modifyvm {{ vmname }} --nic1 hostonly --hostonlyadapter1 vboxnet0
+            sleep 3
             VBoxManage modifyvm {{ vmname }} --nic2 natnetwork --natnetwork1 vboxnat0
           {% elif 'Tarjetas_aislada_aislada' in vmnets %}
             VBoxManage modifyvm {{ vmname }} --nic1 hostonly --hostonlyadapter1 vboxnet1
+            sleep 3
             VBoxManage modifyvm {{ vmname }} --nic2 hostonly --hostonlyadapter2 vboxnet2
           {% endif %}
       register: vmoutputnetadd
