--- a/roles/role_desplegar_vbox/tasks/mensajes/final/setup2vm/vboxvm.yml
+++ b/roles/role_desplegar_vbox/tasks/mensajes/final/setup2vm/vboxvm.yml
@@ -9,5 +9,5 @@
           - "Numero de CPU's: {{ vmsource.split(',')[0] | trim }}"
           - "Cantidad de Memoria: {{ vmsource.split(',')[1] | trim }}GB"
           - "Tamaño disco extra: {{ vmsource.split(',')[2] | trim }}GB"
-          - "IP Dinamica1: {{ vmoutputnetval.stdout_lines[0] }}"
-          - "IP Dinamica2: {{ vmoutputnetval.stdout_lines[1] }}"
+          - "IP Dinamica1: {{ vmnipnet.stdout_lines[0] }}"
+          - "IP Dinamica2: {{ vmnipnet.stdout_lines[1] }}"
