--- a/roles/role_desplegar_vbox/tasks/validar/redes/vboxvm.yml
+++ b/roles/role_desplegar_vbox/tasks/validar/redes/vboxvm.yml
@@ -5,4 +5,4 @@
           sleep 15
           VBoxManage guestproperty get {{ vmname }} /VirtualBox/GuestInfo/Net/0/V4/IP 2>/dev/null | sed 's/Value: //g'
           VBoxManage guestproperty get {{ vmname }} /VirtualBox/GuestInfo/Net/1/V4/IP 2>/dev/null | sed 's/Value: //g'
-      register: vmoutputnetval
+      register: vmnipnet
