--- a/roles/role_desplegar_vbox/tasks/validar/red/vboxvm.yml
+++ b/roles/role_desplegar_vbox/tasks/validar/red/vboxvm.yml
@@ -4,4 +4,4 @@
       shell: |
           sleep 15
           VBoxManage guestproperty get {{ vmname }} /VirtualBox/GuestInfo/Net/0/V4/IP 2>/dev/null | sed 's/Value: //g'
-      register: vmoutputnetval
+      register: vmnipnet
