--- a/roles/role_desplegar_vbox/defaults/main.yml
+++ b/roles/role_desplegar_vbox/defaults/main.yml
@@ -2,11 +2,12 @@
 vmdstoresso: /vmbox/Virtuals
 vmdstoredsk: /vmboxs/Virtuals
 vmdstoretpt: /vmboxs/Templates
+vmvpython: "{{ '/usr/bin/python3.9' if 'RedHat9' in vmostype else '/usr/bin/python3.8' }}"
 
 tower_base_url: "http://172.19.0.2:8052"
 tower_organization: "bvmorg"
 tower_inventory: "bvm_inventory"
-tower_token: "kpcGLWlxEsVx2fSSJMCeSmwhjI9h4H"
+tower_token: "T3qIBMvwZMS9321AL39Dlm66HeB3iX"
 
 tower_user: "{{ lookup('env','TOWER_USERNAME') }}"
 tower_password: "{{ lookup('env','TOWER_PASSWORD') }}"
