--- a/roles/role_desplegar_vbox/tasks/borrar/vm/vboxvm.yml
+++ b/roles/role_desplegar_vbox/tasks/borrar/vm/vboxvm.yml
@@ -1,5 +1,8 @@
 ---
 - block:
     - name: Borrar VM {{ vmostype }} - {{ vmname }} en VirtuaBox.
-      shell: VBoxManage unregistervm {{ vmname }} --delete
+      shell: |
+        VBoxManage controlvm {{ vmname }} shutdown
+        sleep 10
+        VBoxManage unregistervm {{ vmname }} --delete
       register: vmoutputrmvm
