--- a/roles/role_desplegar_vbox/tasks/main.yml
+++ b/roles/role_desplegar_vbox/tasks/main.yml
@@ -18,7 +18,7 @@
 - set_fact:
     run_playbook: |
       {% if tarea == 'Crear_VitualBox_Machine' %}
-      ['ambientar/vboxvm','mensajes/inicio/vboxvm','crear/vm/vboxvm','crear/clone/vboxvm','crear/disk/vboxvm','crear/net/vboxvm','prender/vboxvm','validar/vboxvm','mensajes/final/vboxvm','api/vboxvm']
+      ['ambientar/vboxvm','mensajes/inicio/vboxvm','crear/vm/vboxvm','crear/clone/vboxvm','crear/disk/vboxvm','crear/net/vboxvm','prender/vboxvm','validar/vboxvm','mensajes/final/vboxvm','api/vboxvm','configurar/nombre/vboxvm']
       {% elif tarea == 'Desconectar_VitualBox_Machine' %}
       ['desconectar/net/vboxvm']
       {% elif tarea == 'Conectar_VitualBox_Machine' %}
