--- a/roles/role_cambiar_nombre_vbox/tasks/main.yml
+++ b/roles/role_cambiar_nombre_vbox/tasks/main.yml
@@ -3,10 +3,9 @@
     host_x_host: "{{ ansible_play_hosts_all }}"
 
 - block:
-    - name: Cambio de nombre {{ vmostype }} - {{ vmname }} en VirtuaBox.
+    - name: Cambio de nombre a la VM VirtuaBox.
       become: true
-      hostname:
-        name: "{{ vmnnhn.split('.')[0] }}"
+      shell: "hostnamectl set-hostname {{ vmnnhn.split('.')[0] }}"
       loop: "{{ host_x_host }}"
       loop_control:
         loop_var: vmnnhn
